objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Pledge_Plan__c</fullName>
        <label>Pledge Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Continuous</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pledge_Type__c</fullName>
        <label>Pledge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Payment</fullName>
                </value>
                <value>
                    <fullName>Regular Payment</fullName>
                </value>
                <value>
                    <fullName>Irregular Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Source_Code__c</fullName>
        <formula>Campaign.Campaign_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Campaign Source Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_2xLargest_Amount__c</fullName>
        <formula>AND(npsp__Primary_Contact__r.npo02__LargestAmount__c != 0, Amount &gt;= npsp__Primary_Contact__r.npo02__LargestAmount__c * 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact 2xLargest Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Do_Not_Call__c</fullName>
        <formula>npsp__Primary_Contact__r.DoNotCall</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Do_Not_Contact__c</fullName>
        <formula>npsp__Primary_Contact__r.npsp__Do_Not_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>npsp__Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Has_Opt_Out_Of_Email__c</fullName>
        <formula>npsp__Primary_Contact__r.HasOptedOutOfEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Has Opt Out Of Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>IF(ISBLANK(npsp__Primary_Contact__r.MobilePhone), npsp__Primary_Contact__r.HomePhone,npsp__Primary_Contact__r.MobilePhone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Area__c</fullName>
        <label>Program Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Capacity Building</fullName>
                </value>
                <value>
                    <fullName>Capital/Equipment</fullName>
                </value>
                <value>
                    <fullName>Clinics/Veterinary</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Events/Fundraising</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Outreach</fullName>
                </value>
                <value>
                    <fullName>Programs</fullName>
                </value>
                <value>
                    <fullName>Inspectorate</fullName>
                </value>
                <value>
                    <fullName>Wildlife</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Engagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Engagement</label>
        <referenceTo>pmdm__ProgramEngagement__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>pmdm__Program__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Land</fullName>
                </value>
                <value>
                    <fullName>Farm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSPCA_Funded_Services_Total__c</fullName>
        <label>RSPCA Funded Services Total</label>
        <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Payment_Method__c</field>
            <operation>equals</operation>
            <value>RSPCA Funded</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Receipt_Auto_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Receipt Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Receipt_Number_Formula__c</fullName>
        <formula>BLANKVALUE(Receipt_Number__c, Receipt_Auto_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receipt Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Number__c</fullName>
        <label>Manual Receipt Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Preference__c</fullName>
        <label>Receipt Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email Receipt</fullName>
                </value>
                <value>
                    <fullName>Postal Receipt</fullName>
                </value>
                <value>
                    <fullName>No Receipt</fullName>
                    <default>true</default>
                    <label>No Receipt</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <label>Record_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Information__c</fullName>
        <label>Refund Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Refund_Reason__c</fullName>
        <label>Refund Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remaining_Funds__c</fullName>
        <formula>Amount -  Total_Allocation_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reservation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservation</label>
        <referenceTo>B25__Reservation__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Run_Workflow_Rule_With_Name__c</fullName>
        <label>Run Workflow Rule With Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Date__c</fullName>
        <description>Date when the gift card should be sent</description>
        <label>Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Participant</label>
        <referenceTo>pmdm__ServiceParticipant__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Schedule</label>
        <referenceTo>pmdm__ServiceSchedule__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Session</label>
        <referenceTo>pmdm__ServiceSession__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Share_Value__c</fullName>
        <label>Share Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Type__c</fullName>
        <label>Sponsorship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>In Kind</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Soft Rejection</fullName>
                </value>
                <value>
                    <fullName>Hard Rejection</fullName>
                </value>
                <value>
                    <fullName>Retrying</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Disputed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stripe_Customer_Id__c</fullName>
        <label>Stripe Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stripe_Payment_Id__c</fullName>
        <label>Stripe Payment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_Bequest_Opp_Amount_Outstanding__c</fullName>
        <formula>npsp__Primary_Contact__r.Sum_Bequest_Opp_Amount_Outstanding__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum Bequest Opp Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_Bequest_Opp_Payments_Made__c</fullName>
        <formula>npsp__Primary_Contact__r.Sum_Bequest_Opp_Payments_Made__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum Bequest Opp Payments Made</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test_Variant__c</fullName>
        <label>Test Variant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Location__c</fullName>
        <label>Ticket Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Allocation_Amount__c</fullName>
        <label>Total Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Child_Tickets_Amount__c</fullName>
        <label>Total Child Tickets Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Child__c</fullName>
        <label>Total Child Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Concession_Tickets_Amount__c</fullName>
        <label>Total Concession Tickets Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Concession_Tickets__c</fullName>
        <label>Total Concession Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Family_Tickets_Amount__c</fullName>
        <label>Total Family Tickets Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Family_Tickets__c</fullName>
        <label>Total Family Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Merchandise_Items__c</fullName>
        <label>Total Merchandise Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tickets_Amount__c</fullName>
        <label>Total Tickets Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_Date__c</fullName>
        <label>Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transfer_Value__c</fullName>
        <label>Transfer Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UTM_Ad_Content__c</fullName>
        <label>UTM Ad Content</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UTM_Campaign__c</fullName>
        <label>UTM Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Medium__c</fullName>
        <label>UTM Medium</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Source__c</fullName>
        <label>UTM Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Term__c</fullName>
        <label>UTM Term</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_Gap__c</fullName>
        <formula>Date_of_Will__c  -  Deceased_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Will Gap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>today__c</fullName>
        <formula>today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>today</label>
        <type>Date</type>
    </fields>
    <recordTypes>
        <fullName>Bequest</fullName>
        <active>true</active>
        <businessProcess>Bequest</businessProcess>
        <description>Record used to capture details about a bequest that has been pledged by a donor.</description>
        <label>Gifts In Wills</label>
    </recordTypes>
    <recordTypes>
        <fullName>Corporate_Support_Day</fullName>
        <active>true</active>
        <businessProcess>Corporate Support Day</businessProcess>
        <description>Captures details about a corporate support day with RSPCA.</description>
        <label>Corporate Support Day</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Ticket</fullName>
        <active>true</active>
        <businessProcess>Event Tickets</businessProcess>
        <description>Record used to capture details about an event ticket sale.</description>
        <label>Event Ticket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gift_Card</fullName>
        <active>true</active>
        <businessProcess>npsp_plus_dres__Donation</businessProcess>
        <description>Record used to capture details of a gift card.</description>
        <label>Gift Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grant</fullName>
        <active>true</active>
        <businessProcess>Grant</businessProcess>
        <description>Records used to capture details about the grant prospecting process.</description>
        <label>Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Ever_After</fullName>
        <active>true</active>
        <businessProcess>Membership</businessProcess>
        <description>Record used to capture details about a Home Ever After Opportunity.</description>
        <label>Home Ever After</label>
    </recordTypes>
    <recordTypes>
        <fullName>InKindGift</fullName>
        <active>true</active>
        <businessProcess>In-Kind Gift</businessProcess>
        <description>Record used to capture details about goods or services received as in-kind.</description>
        <label>In-Kind Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>MajorGift</fullName>
        <active>true</active>
        <businessProcess>Major Gift</businessProcess>
        <description>Record used to capture details about a large donation from a major donor.</description>
        <label>Major Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>MatchingGift</fullName>
        <active>true</active>
        <businessProcess>Matching Gift</businessProcess>
        <description>Record used to capture a matching donation from an donor&apos;s employer or other organisation.</description>
        <label>Matching Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <businessProcess>Membership</businessProcess>
        <description>Record used to capture details about a membership.</description>
        <label>Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Merchandise</fullName>
        <active>true</active>
        <businessProcess>Merchandise</businessProcess>
        <description>Record used to capture details about a merchandise sale.</description>
        <label>Merchandise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Property_Transfer</fullName>
        <active>true</active>
        <businessProcess>Property Transfer</businessProcess>
        <description>Record used to capture details about a property transfer.</description>
        <label>Property Transfer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Raffle_Ticket</fullName>
        <active>true</active>
        <businessProcess>Raffle Ticket</businessProcess>
        <description>Record used to capture details about a raffle ticket purchase.</description>
        <label>Raffle Ticket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Securities</fullName>
        <active>true</active>
        <businessProcess>Securities</businessProcess>
        <description>Record used to capture details about securities.</description>
        <label>Securities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Delivery</fullName>
        <active>true</active>
        <businessProcess>npsp_plus_dres__Donation</businessProcess>
        <label>Service Delivery</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sponsorship</fullName>
        <active>true</active>
        <businessProcess>Sponsorships</businessProcess>
        <description>Record used to capture details about corporate sponsorship.</description>
        <label>Sponsorship</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Closed_Won_Bequest</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISCHANGED(StageName),
TEXT(StageName) = &apos;Closed Won&apos;,
 Paperwork_Received__c  = False,
RecordType.Name = &apos;Bequest&apos;
)</errorConditionFormula>
        <errorDisplayField>Paperwork_Received__c</errorDisplayField>
        <errorMessage>Please ensure the paperwork received checkbox is ticked</errorMessage>
    </validationRules>
</CustomObject>